--- a/trunk/Playlists/news.txt
+++ b/trunk/Playlists/news.txt
@@ -1,16 +1,12 @@
 Navi-X News
 (Questions, suggestions, help, playlists to rodejo16@gmail.com)
 
-www.navi-x.nl is the new official Navi-X website. 
-This site will become the main source for new Navi-X releases,
-forums, playlists sharing, etc. The site is still under development.
-
 History:
-Click the 'About' button for the latest changes.
+See 'About' button for the latest changes.
 
+2008/06/16 - Released Navi-X v1.9.3
 2008/02/17 - New: Started Google project page at:
 http://code.google.com/p/navi-x/
-
 2008/02/10 - Released Navi-X v1.9.1
 2008/02/08 - Released Navi-X v1.9
 2007/12/31 - Released Navi-X v1.8
