--- a/wiki/How_do_I_install_Navi_X.wiki
+++ b/wiki/How_do_I_install_Navi_X.wiki
@@ -20,3 +20,5 @@ OR
 http://navi-x.googlecode.com/svn/trunk/boxee
 
 3. Click on "The Navi-X for Boxee Repository on GoogleCode" then click "Navi-X" to view the app description. Press left or right until "Favorite" is highlighted, then click on it to save the app to your favorites under Apps in Boxee.
+
+To update Navi-X, simply grab the latest copy on our website for XBMC. Boxee will always have the latest version available when it is released.
