Edited wiki page How_do_I_use_XBMC_or_Boxee through web user interface.

--- a/wiki/How_do_I_use_XBMC_or_Boxee.wiki
+++ b/wiki/How_do_I_use_XBMC_or_Boxee.wiki
@@ -5,8 +5,8 @@ Explanation: Please reach out to staff at XBMC or Boxee forums for details. We o
 
 XBMC Support
 
-http://xbmc.org/support/ ___ http://forum.xbmc.org/
+http://xbmc.org/support/  also...  http://forum.xbmc.org/
 
 Boxee Support
 
-http://support.boxee.tv/home ___ http://forums.boxee.tv
+http://support.boxee.tv/home   also...  http://forums.boxee.tv
