--- a/wiki/Frequently_Asked_Questions.wiki
+++ b/wiki/Frequently_Asked_Questions.wiki
@@ -3,4 +3,4 @@ Issue: Frequently Asked Questions.
 
 Explanation: The frequently asked questions documentation is no longer being used as people did not read it for frequently asked question answers.
 
-Instead, this Wiki has been compiled and will serve the purpose of all questions regarding Navi-X.
+Instead, this Wiki has been compiled and will serve the purpose of addressing all questions regarding Navi-X.
