--- a/wiki/How_can_I_donate_money_to_Navi_X.wiki
+++ b/wiki/How_can_I_donate_money_to_Navi_X.wiki
@@ -1,6 +1,6 @@
 #labels Phase-Support
 Issue: How can I donate money to Navi-X?
 
-Explanation: Team Navi-X and it's members do NOT accept donations of any kind. Navi-X is an open-source project and as such, the program is free of charge and free to distribute and even for using code snippets found within the application. We simply ask if you choose to use a snippet of code from the Navi-X code base, that you attribute the works from the code to the original developer and creator of Navi-X, Rodejo.
+Explanation: Team Navi-X and it's members do NOT accept donations of any kind. Navi-X is an open-source project and as such, the program is free of charge and free to distribute and even for using code snippets found within the application. We simply ask if you choose to use a snippet of code from the Navi-X code base, that you attribute the works of code to the original developer and creator of Navi-X, Rodejo.
 
 If you still insist on donating something to Navi-X, we always welcome adding fresh links to quality content on the internet so that all users may benefit from sharing great clips and media found on the internet. Anything you can do to benefit the users in terms of contributions to Navi-X coding or development is always welcomed.
