--- a/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist.wiki
+++ b/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist.wiki
@@ -14,6 +14,8 @@ swfUrl=http://www.livestation.com/flash/player/5.4/player.swf
 swfVfy=true
 live=true
 }}}
+***Note: This live stream has since stopped working because the user broadcasting this channel is no longer broadcasting it. Don't try plugging it in a playlist as it will not work! 
+
 
 In an RTMP media entry, there are several playback parameters that have to be configured in order to get a live stream via rtmp to playback in Navi-X.
 
