Edited wiki page Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X through web user interface.

--- a/wiki/Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X.wiki
+++ b/wiki/Troubleshooting_Guide_for_Buffering_Issues_in_Navi_X.wiki
@@ -5,7 +5,7 @@ Explanation: After massive amounts of complaints to me about “Why is this link
 
 General Synopsis of Buffering and Bandwidth history in general…
 
-Buffering is a regular occurrence that happens with any internet connection where a large file transfer is taking place. THERE IS NOTHING NO ONE CAN DO TO CHANGE THIS. What do you think a file transfer is?? Pieces of the file being transferred and accumulated until all bits are received. With this said, buffering is not normally observed unless it is involved in streaming of multimedia, where files are played on the fly and accumulated from a server. You normally would never get the opportunity to open a file and view its content on the fly during a transmission if it were data, so in general streaming of media is a fairly brand new concept to every industry. Just this year at CES was the formal unveiling of industry big wigs commercial products and ideas for the IPTV industry. Many commercial broadcasters and internet providers are now having to deal with realities beyond their control… that people want to use the internet to get their favorite media services… this means we need a mega investment worldwide in fiber optic and other high speed technologies JUST TO ADEQUATELY SUPPORT this new industry with its transmission demands for everyone. While some of us have been doing this for years without any upgrades or changes in our own ways of doing this, the number of users has changed from a small handful to easy accessibility for everyone and bandwidth is currently being consumed at much larger rates than it used to be. WHY AM I TELLING YOU ALL THIS??? Because most folks seem to have it built up in their head that Navi-X and any other streaming solutions are supposed to work flawlessly and never buffer EVER! This is simply a ridiculous thing to believe. I know this does not apply to everyone and others are having some slight buffering issues, but others have acted as if something for free is supposed to be perfect… I am simply asking everyone to be realistic and understand the internet is a collective of everyone working together to make this network work and that we have only begun to scratch the surface in the IPTV industry.
+Buffering is a regular occurrence that happens with any internet connection where a large file transfer is taking place. THERE IS NOTHING NO ONE CAN DO TO CHANGE THIS. What do you think a file transfer is?? Pieces of the file being transferred and accumulated until all bits are received. With this said, buffering is not normally observed unless it is involved in streaming of multimedia, where files are played on the fly and accumulated from a server. You normally would never get the opportunity to open a file and view its content on the fly during a transmission if it were data, so in general streaming of media is a fairly brand new concept to every industry. Just this year (2011) at CES was the formal unveiling of industry big wigs commercial products and ideas for the IPTV industry. Many commercial broadcasters and internet providers are now having to deal with realities beyond their control… that people want to use the internet to get their favorite media services… this means we need a mega investment worldwide in fiber optic and other high speed technologies JUST TO ADEQUATELY SUPPORT this new industry with its transmission demands for everyone. While some of us have been doing this for years without any upgrades or changes in our own ways of doing this, the number of users has changed from a small handful to easy accessibility for everyone and bandwidth is currently being consumed at much larger rates than it used to be. WHY AM I TELLING YOU ALL THIS??? Because most folks seem to have it built up in their head that Navi-X and any other streaming solutions are supposed to work flawlessly and never buffer EVER! This is simply a ridiculous thing to believe. I know this does not apply to everyone and others are having some slight buffering issues, but others have acted as if something for free is supposed to be perfect… I am simply asking everyone to be realistic and understand the internet is a collective of everyone working together to make this network work and that we have only begun to scratch the surface in the IPTV industry.
 
 With a general understanding of buffering and its history in mind, I will now outline some steps you can do to attempt to minimize your buffering issues to an acceptable level of performance:
 
