--- a/wiki/What_platforms_are_Navi_X_compatible_with.wiki
+++ b/wiki/What_platforms_are_Navi_X_compatible_with.wiki
@@ -1,3 +1,3 @@
 Issue: What platforms are Navi-X compatible with?
 
-Explanation: XBMC: Windows, Mac, and Linux. Boxee: Windows, Mac, Linux and Boxee Box. XBMC4Xbox : original Xbox (modified). iOS : Apple TV 1 & 2, iPhone 4, and iPad when jailbroken. Android: Phones and Tablets via Amo Navi-X. PS3 (modified): Showtime Media Center.
+Explanation: XBMC: Windows, Mac, and Linux. Boxee: Windows, Mac, Linux and Boxee Box. XBMC4Xbox : original Xbox (modified). iOS : Apple TV 1 & 2, iPhone 4, and iPad when jailbroken. PS3 (modified): Showtime Media Center.
