Edited wiki page How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist through web user interface.

--- a/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist.wiki
+++ b/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist.wiki
@@ -25,7 +25,7 @@ URL=http://livestation.com/bbcnews playpath=bbcnews_en_high.sdp swfUrl=http://ww
 
 ***Note: This used to be a working example and is no more. This live stream has since stopped working because the user broadcasting this channel is no longer broadcasting it. Don't try plugging it in a playlist as it will not work! This is strictly for an example of what tags must be included in a working stream.
 
-*** Boxee Users: Boxee 1.5.x versions DO NOT SUPPORT LIVE STREAMING via rtmp. When it does, this notice will be removed.
+*** Boxee Users: Boxee 1.5.x versions DO NOT SUPPORT LIVE STREAMING via RTMP, RTMPe or any other variation of RTMP. When Boxee does start supporting this, this notice will be removed! Thanks!
 
 In an RTMP media entry, there are several playback parameters that have to be configured in order to get a live stream via rtmp to playback in Navi-X.
 
