Edited wiki page How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist through web user interface.

--- a/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist.wiki
+++ b/wiki/How_do_I_add_RTMP_parameters_to_a_media_item_in_a_playlist.wiki
@@ -31,6 +31,6 @@ In an RTMP media entry, there are several playback parameters that have to be co
 
 While working manually with playlists, you may already be familiar with the "type", "name" and "URL" tags, but in addition to these necessary entries, for live streams their needs to be the addition of several additional parameters to the media entry in order to make it work successfully in Navi-X:
 
-"Playpath", "swfUrl", "swfVfy" and "live" are these tags. When you go to decipher the GET/POST data you are receiving via a port sniffing program, you will get these variables in your data... these variables need to be added in order to make the stream work... plain and simple.
+"Playpath", "swfUrl", "swfVfy" and "live" are these tags. Sometimes there will be additional, undocumented variables to handle due to the nature of how RTMP functions... these may need to be added to the RTMP entry as well... Only those who understand how to decipher GET/POST results would know how to do this. When you go to decipher the GET/POST data you are receiving via a port sniffing program, you will get these variables in your data... the primary handling variables need to be added in order to make the stream work... plain and simple.
 
-The trick is getting the correct data to plug into these variables so that the video will play back. If you can successfully figure out and extract these and add them to your media item, the live stream via RTMP will work in Navi-X.
+The trick is getting the correct data to plug into these variables so that the video will play back. If you can successfully figure out and extract these and add them to your media item, the live stream via RTMP will work in Navi-X. Typically, when reading GET/POST results, this should read out in text and be pretty easy to figure what part in the results you need included in the RTMP entry.
