Edited wiki page Background_Information_on_Navi_X through web user interface.

--- a/wiki/Background_Information_on_Navi_X.wiki
+++ b/wiki/Background_Information_on_Navi_X.wiki
@@ -7,6 +7,6 @@ Believe it or not, there used to be a time where Navi-X didn't even have tv show
 
 Before Navi-Xtreme, there was a system called Navi-Xtra, which was basically a webpage with an editable text file you could add a link to your own privately hosted playlist to. Problem is, you could also re-arrange the playlist anyway you saw fit, including putting your links at the top of the list over everyone elses... there were no scrapers or processors or complete lists of any series. Since then, Navi-Xtreme has not only created a central place for Navi-X users to congregate and communicate, but host their own playlists in an online directory that's controlled and organized.
 
-Navi-X in an open-source project and as such, you may freely distribute, copy, share and edit code in Navi-X as you see fit. We only ask if you use any portions of the code included in Navi-X, to attribute it to the appropriate developer or to Rodejo if you use code samples from Navi-X for XBMC or Boxee.
+The app Navi-X in an open-source project and as such, you may freely distribute, copy, share and edit code in Navi-X as you see fit. We only ask if you use any portions of the code included in Navi-X, to attribute it to the appropriate developer or to Rodejo if you use code samples from Navi-X for XBMC or Boxee.
 
 Because Navi-X is an open-source project, team members and contributors may come and go freely from time to time. Navi-X does not ensure services will always be available, but we will make our best effort to retain all current services as well as team members and contributors to the best extent that we can, as well as keeping Navi-X 100% free forever.
