--- a/wiki/How_do_I_install_Navi_X.wiki
+++ b/wiki/How_do_I_install_Navi_X.wiki
@@ -4,13 +4,17 @@ Issue: How do I install Navi-X?
 Explanation: 
 
 On XBMC:
+
 1. Go to www.navi-x.org and click on "Downloads" then click the button that says "Download Navi-X" and save the file to your computers desktop.
 
 2. Install XBMC on your computer if you have not already. You can get the latest "stable" and "unstable" builds at http://xbmc.org/download/
 
 3. Once XBMC is installed open it and click on "System", then "Setting", then "Addons" and "Install from Zip File". Select the location on your computer where you saved Navi-X and select the zip file. Navi-X should now be available in XBMC under "Programs".
 
+
+
 On Boxee:
+
 1. Install Boxee on your computer or turn on your Boxee Box. You can get the latest updated software at http://boxee.tv/download/
 
 2. At the main screen for Boxee, click on Apps > Repositories and add the following repository address:
@@ -23,7 +27,9 @@ http://navi-x.googlecode.com/svn/trunk/boxee
 
 To update Navi-X, simply grab the latest copy on our website for XBMC. Boxee will always have the latest version available when it is released.
 
-*** Apple TV (iOS) Users:
+
+
+On Apple TV, iPad, iPhone and iOS supported devices :
 
 1. Jailbreak your Apple TV (or iOS device) and install XBMC. You can get details on how to do this from Google.
 
