Edited wiki page How_do_I_add_something_I_find_in_Navi_X_to_my_favorites through web user interface.

--- a/wiki/How_do_I_add_something_I_find_in_Navi_X_to_my_favorites.wiki
+++ b/wiki/How_do_I_add_something_I_find_in_Navi_X_to_my_favorites.wiki
@@ -3,6 +3,6 @@ Issue: How do I add something I find in Navi-X to my "favorites"?
 
 Explanation: To add something to your favorites list in Navi-X, you would highlight an item you would like to save in your favorites then press right once on your remote or keyboard and then select "Add to Favorites" to add the item to your favorites.
 
-***For XBMC Eden users: Currently, a change in XBMC code has forcefully removed the favorites options it appears for all of XBMC's platforms. This is currently being investigated and looked into as we did not remove the feature from the app. It appears XBMC is truncating menu's for scripts and plugins for some reason. 
-
 ***Note: This only works in "view=list" mode, when choosing a viewing layout for your playlists. If you do not get the option to favorite when pressing right on a highlighted item, switch you playlist view mode to "list" and try again.
+
+***For XBMC Eden users: The "Remove Favorites" option has been relocated in Navi-X. It is now only available in your favorites list accessed via the secondary context menu (the button located next to the Windows key on your keyboard when in XBMC).
