--- a/wiki/How_do_I_manually_update_the_boxee_software_from_a_flash_drive.wiki
+++ b/wiki/How_do_I_manually_update_the_boxee_software_from_a_flash_drive.wiki
@@ -4,7 +4,7 @@ ________________________________________________________________________
 
 
 Explanation:
-Sometimes, the update for firmware on a Boxee Box does flash your device properly during an update over the internet directly. The symptoms typically include primary features not working in Boxee or Navi-X. If you feel your device should be completing a task that appears to be failing or not working, you should consider factory restoring your boxee box and manually updating your firmware from a flash drive. Instructions to perform a factory reset will be included in a separate article via search.
+Sometimes, the update for firmware on a Boxee Box does NOT flash your device properly during an update over the internet directly. The symptoms typically include primary features not working in Boxee or Navi-X. If you feel your device should be completing a task that appears to be failing or not working, you should consider factory restoring your boxee box and manually updating your firmware from a flash drive. Instructions to perform a factory reset will be included in a separate article via search.
 
 To Fix This Issue:
 1. Download the latest Boxee Box firmware at http://www.boxee.tv/download/boxeebox. The downloaded file will be named boxee.iso, and that name must be maintained. 
