--- a/trunk/Navi-X/changelog.txt
+++ b/trunk/Navi-X/changelog.txt
@@ -1,6 +1,11 @@
 Navi-X Changelog:
 
 -------------------------------------------------------------------------------
+3.7.5
+
+Moved primary portal domain to navixtreme.com
+
+-------------------------------------------------------------------------------
 3.7.4
 
 NIPL updates:
